<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginMenuActivity" android:background="@drawable/background"
>

    <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_dark_overlay"
            android:id="@+id/view3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:src="@mipmap/logo"
                android:layout_width="156dp"
                android:layout_height="156dp"
                android:id="@+id/selectImage"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/app_logo"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_stworz_konto"
                android:layout_width="264.09dp"
                android:layout_height="38.66dp"
                android:text="@string/create_account"
                app:cornerRadius="100dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" android:layout_marginTop="16dp"
                app:backgroundTint="@color/colorButtonSecondary"
                android:insetBottom="0dp"
                android:insetTop="0dp"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textAllCaps="true" android:typeface="normal" android:fontFamily="@font/varela_round"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send"
                android:layout_width="264.09dp"
                android:layout_height="38.66dp"
                android:text="@string/log_in"
                app:cornerRadius="100dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                app:backgroundTint="@color/colorPrimary"
                android:insetBottom="0dp"
                android:insetTop="0dp"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textAllCaps="true" android:typeface="normal" android:fontFamily="@font/varela_round"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/btn_stworz_konto"
        />

        <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center_horizontal" android:layout_marginEnd="32dp" android:layout_marginStart="32dp"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toBottomOf="@+id/selectImage" android:id="@+id/linearLayout3"
                android:layout_width="264.09dp">

            <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp" android:id="@+id/view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" android:background="@color/colorLigth"
                    android:layout_gravity="center" android:layout_weight="1"/>

            <TextView
                    android:text="@string/title_login_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:textSize="20sp"
                    android:fontFamily="@font/varela_round"
                    android:typeface="normal"
                    android:textAllCaps="true"/>

            <View
                    android:layout_height="2dp" android:id="@+id/view2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" android:background="@color/colorLigth"
                    android:layout_gravity="center" android:layout_weight="1" android:layout_width="wrap_content"/>

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/facebook"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center_horizontal|center_vertical">

            <TextView
                    android:text="@string/terms_and_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:fontFamily="@font/varela_round"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    />

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical">

                <TextView
                        android:text="@string/policy_privacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView11"
                        android:fontFamily="@font/varela_round"
                        android:textSize="12sp"
                        android:textAlignment="textEnd"
                        />

                <TextView
                        android:text="@string/and"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView13"
                        android:fontFamily="@font/varela_round"
                        android:textSize="12sp"
                        android:textAlignment="center"
                        />

                <TextView
                        android:text="@string/terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView15"
                        android:fontFamily="@font/varela_round"
                        android:textSize="12sp"
                        android:textAlignment="center"
                        />
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView16"
                    android:fontFamily="@font/varela_round"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:text="@string/terms_and_privacy_footer"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_facebook"
                android:layout_width="264.09dp"
                android:layout_height="38.66dp"
                android:text="@string/login_by_facebook"
                app:cornerRadius="100dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                app:backgroundTint="@color/colorFacebook"
                android:insetBottom="0dp"
                android:insetTop="0dp"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textAllCaps="true" android:typeface="normal" android:fontFamily="@font/varela_round"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/btn_send"
                app:icon="@mipmap/ic_facebook"/>

        <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/btn_facebook"
                app:layout_constraintStart_toStartOf="@+id/btn_facebook"
                app:layout_constraintTop_toTopOf="@+id/btn_facebook"
                app:layout_constraintBottom_toBottomOf="@+id/btn_facebook" android:visibility="invisible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>