<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity"
        android:background="@drawable/background"
        android:id="@+id/constraintLayout2">

    <View
            android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_dark_overlay"
        app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

        <ImageView
                android:src="@mipmap/logo"
                android:layout_width="156dp"
                android:layout_height="156dp"
                android:id="@+id/selectImage"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/app_logo"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center_horizontal"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toBottomOf="@+id/selectImage"
                android:id="@+id/linearLayout3"
                android:layout_width="264.09dp">

            <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:id="@+id/view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@color/colorLigth"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>

            <TextView
                    android:text="@string/log_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:textSize="20sp"
                    android:fontFamily="@font/varela_round"
                    android:typeface="normal"
                    android:textAllCaps="true"/>

            <View
                    android:layout_height="2dp"
                    android:id="@+id/view2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@color/colorLigth"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"/>

        </LinearLayout>

        <EditText
                android:layout_width="264.09dp"
                android:layout_height="39dp"
                android:inputType="textEmailAddress"
                android:id="@+id/emailInput"
                android:hint="@string/email"
                android:singleLine="true"
                android:background="@drawable/input_overlay"
                android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                android:textSize="12sp"
                android:fontFamily="@font/varela_round"
                android:paddingStart="54dp"
                android:paddingEnd="8dp"
                tools:ignore="Autofill"/>

        <ImageView
                android:src="@mipmap/email_icon"
                android:layout_width="38.66dp"
                android:layout_height="38.66dp"
                android:id="@+id/emailImage"
                android:background="@drawable/input_overlay_icon"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="@+id/emailInput"
                app:layout_constraintTop_toTopOf="@+id/emailInput"
                app:layout_constraintBottom_toBottomOf="@+id/emailInput"
                app:layout_constraintVertical_bias="0.0"
                android:contentDescription="@string/email_image"/>

        <EditText
                android:layout_width="264.09dp"
                android:layout_height="39dp"
                android:id="@+id/passwordInput"
                android:hint="@string/password"
                android:singleLine="true"
                android:background="@drawable/input_overlay"
                android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="12sp"
                android:fontFamily="@font/varela_round"
                android:paddingStart="54dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/emailInput"
                android:inputType="textPassword"
                android:paddingEnd="8dp"
                tools:ignore="Autofill"/>

        <ImageView
                android:src="@mipmap/password_icon"
                android:layout_width="38.66dp"
                android:layout_height="38.66dp"
                android:id="@+id/passwordImage"
                android:background="@drawable/input_overlay_icon"
                android:padding="10dp"
                app:layout_constraintTop_toTopOf="@+id/passwordInput"
                app:layout_constraintBottom_toBottomOf="@+id/passwordInput"
                app:layout_constraintStart_toStartOf="@+id/passwordInput"
                app:layout_constraintVertical_bias="0.0"
                android:contentDescription="@string/password_image"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send"
                android:layout_width="264.09dp"
                android:layout_height="38.66dp"
                android:text="@string/log_in"
                app:cornerRadius="100dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                app:backgroundTint="@color/colorPrimary"
                android:insetBottom="0dp"
                android:insetTop="0dp"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:typeface="normal"
                android:fontFamily="@font/varela_round"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordInput"/>

        <TextView
                android:text="@string/register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_register"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/varela_round"
                android:textSize="12sp"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/btn_send"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                />

        <TextView
                android:text="@string/passwd_reset_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_reset_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:fontFamily="@font/varela_round"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintTop_toBottomOf="@+id/btn_register"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginTop="4dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>